--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "noimport"
-version = "0.0.1.post1"
+version = "0.0.1"
 description = "A simple package to prevent the abusive use of the `import` statement in Python."
 authors = [
     "Andy Khang <andykhang404@gmail.com>"
